--- a/app/views/wrestlers/index.slim
+++ b/app/views/wrestlers/index.slim
@@ -27,26 +27,27 @@
 							.intro-text
 								h3
 									u
-										=@alignments[alignment]
-							- unless @main_event_babyfaces.blank?
-			<% @main_event_babyfaces.each do |wrestler|  %>
-					<div class="col-sm-4 text-center">
-						<%=image_tag wrestler.image.url, class: "img-responsive"  %>
-					<div class="btn-group pull-right wrestler-options-group">
-						<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
-										aria-haspopup="true" aria-expanded="false">
-							<i class="glyphicon glyphicon-cog"></i>
-							<span class="caret"></span>
-						</button>
-						<ul class="dropdown-menu">
-							<li><%= link_to 'Wrestler Profile', wrestler%></li>
-							<li><%= link_to 'Change Details', edit_wrestler_path(wrestler) %></li>
-							<li><%= link_to 'You\'re Fired', wrestler, method: :delete, data: { confirm: 'Are you sure?' } %></li>
-						</ul>
-					</div>
-						<h3 class="text-left"><%= wrestler.name %></h3>
-					</div>
-					<%end  %>
+										= @alignments[alignment]
+							- unless @wrestler_categories[index].blank?
+								- @wrestler_categories[index].each do |wrestler|
+									.col-sm-4
+										.text-center
+											= image_tag wrestler.image.url, class: "img-responsive"
+					// <div class="btn-group pull-right wrestler-options-group">
+					/ 	<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
+					/ 	aria-haspopup="true" aria-expanded="false">
+					/ 		<i class="glyphicon glyphicon-cog"></i>
+					/ 		<span class="caret"></span>
+					/ 	</button>
+					/ 	<ul class="dropdown-menu">
+					/ 		<li><%= link_to 'Wrestler Profile', wrestler%></li>
+					/ 		<li><%= link_to 'Change Details', edit_wrestler_path(wrestler) %></li>
+					/ 		<li><%= link_to 'You\'re Fired', wrestler, method: :delete, data: { confirm: 'Are you sure?' } %></li>
+					/ 	</ul>
+					/ </div>
+					/ 	<h3 class="text-left"><%= wrestler.name %></h3>
+					/ </div>
+					/ <%end  %>
 			<%else  %>
 				<h4 class ="intro-text text-center">
 				You have no babyface wrestlers able to compete in the Main Event! <%= link_to 'Hire a new wrestler', new_wrestler_path %><br>
@@ -54,335 +55,6 @@
 				</h4><br>
 					<h1 class="text-center"> SHOVE THAT CONTROL INTO A NOSE DIVE!!!</h1>
 			<%end  %>
-			</div>
-		</div>
-	</div>
-<div class="row">
-	<div class="box">
-		<div class="col-lg-12">
-			<hr>
-<h3 class ="intro-text text-center"><u>Heels (Rudos)</u> </h3>
-			<%unless @main_event_heels.blank?  %>
-				<% @main_event_heels.each do |wrestler|  %>
-					<div class="col-sm-4 text-center">
-						<%=image_tag wrestler.image.url, class: "img-responsive"  %>
-						<div class="btn-group pull-right wrestler-options-group">
-							<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
-											aria-haspopup="true" aria-expanded="false">
-								<i class="glyphicon glyphicon-cog"></i>
-								<span class="caret"></span>
-							</button>
-							<ul class="dropdown-menu">
-								<li><%= link_to 'Wrestler Profile', wrestler%></li>
-								<li><%= link_to 'Change Details', edit_wrestler_path(wrestler) %></li>
-								<li><%= link_to 'You\'re Fired', wrestler, method: :delete, data: { confirm: 'Are you sure?' } %></li>
-							</ul>
-						</div>
-						<h3 class="text-left"><%= wrestler.name %></h3>
-					</div>
-				<%end  %>
-			<%else  %>
-					<h4 class ="intro-text text-center">
-						You have no heel wrestlers able to compete in the Main Event! <%= link_to 'Hire a new wrestler', new_wrestler_path %><br>
-						Turn a heel face! Turn a face heel! Promote somebody! Alternatively
-					</h4><br>
-					<h1 class="text-center"> SHOVE THAT CONTROL INTO A NOSE DIVE!!!</h1>
-			<%end  %>
-		</div>
-	</div>
-</div>
-<div class="row">
-	<div class="box">
-		<div class="col-lg-12">
-			<hr>
-			<h2 class="text-center">
-				<strong>Your Wrestlers in the High Card! </h2></strong>
-			<h3 class ="intro-text text-center"><u>Babyfaces (Tecnicos)</u> </h3>
-			<%unless @high_card_babyfaces.blank?  %>
-				<% @high_card_babyfaces.each do |wrestler|  %>
-					<div class="col-sm-4 text-center">
-						<%=image_tag wrestler.image.url, class: "img-responsive "  %>
-						<div class="btn-group pull-right wrestler-options-group">
-							<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
-											aria-haspopup="true" aria-expanded="false">
-								<i class="glyphicon glyphicon-cog"></i>
-								<span class="caret"></span>
-							</button>
-							<ul class="dropdown-menu">
-								<li><%= link_to 'Wrestler Profile', wrestler%></li>
-								<li><%= link_to 'Change Details', edit_wrestler_path(wrestler) %></li>
-								<li><%= link_to 'You\'re Fired', wrestler, method: :delete, data: { confirm: 'Are you sure?' } %></li>
-							</ul>
-						</div>
-						<h3 class="text-left"><%= wrestler.name %></h3>
-					</div>
-				<%end  %>
-			<%else  %>
-					<h4 class ="intro-text text-center">
-						You have no babyface wrestlers able to compete in the High Card! <%= link_to 'Hire a new wrestler',
-																																									 new_wrestler_path %><br>
-						Turn a heel face! Turn a face heel! Promote somebody! Alternatively
-					</h4><br>
-					<h1 class = "text-center"> SHOVE THAT CONTROL INTO A NOSE DIVE!!!</h1>
-			<%end  %>
-		</div>
-	</div>
-</div>
-<div class="row">
-	<div class="box">
-		<div class="col-lg-12">
-			<hr>
-			<h3 class ="intro-text text-center"><u>Heels (Rudos)</u> </h3>
-				<% unless @high_card_heels.blank?  %>
-					<% @high_card_heels.each do |wrestler|  %>
-					<div class="col-sm-4 text-center">
-						<%=image_tag wrestler.image.url, class: "img-responsive "  %>
-
-							<div class="btn-group pull-right wrestler-options-group">
-								<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
-												aria-haspopup="true" aria-expanded="false">
-									<i class="glyphicon glyphicon-cog"></i>
-									<span class="caret"></span>
-								</button>
-								<ul class="dropdown-menu">
-									<li><%= link_to 'Wrestler Profile', wrestler%></li>
-									<li><%= link_to 'Change Details', edit_wrestler_path(wrestler) %></li>
-									<li><%= link_to 'You\'re Fired', wrestler, method: :delete, data: { confirm: 'Are you sure?' } %></li>
-								</ul>
-							</div>
-							<h3 class="text-left"><%= wrestler.name %></h3>
-							</div>
-				<%end  %>
-			<%else  %>
-					<h4 class ="intro-text text-center">
-						You have no heel wrestlers able to compete in the High Card! <%= link_to 'Hire a new wrestler',
-																																												 new_wrestler_path %><br>
-						Turn a heel face! Turn a face heel! Promote somebody! Alternatively
-					</h4><br>
-					<h1 class = "text-center"> SHOVE THAT CONTROL INTO A NOSE DIVE!!!</h1>
-			<%end  %>
-		</div>
-	</div>
-</div>
-		<div class="row">
-			<div class="box">
-				<div class="col-lg-12">
-					<hr>
-					<h2 class="text-center">
-						<strong>Your Wrestlers in the Mid Card!</strong>
-					</h2>
-					<h3 class ="intro-text text-center"><u>Babyfaces (Tecnicos)</u> </h3>
-					<%unless @mid_card_babyfaces.blank?  %>
-						<% @mid_card_babyfaces.each do |wrestler|  %>
-									<div class="col-sm-4 text-center">
-										<%=image_tag wrestler.image.url, class: "img-responsive "  %>
-									<div class="btn-group pull-right wrestler-options-group">
-										<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
-														aria-haspopup="true" aria-expanded="false">
-											<i class="glyphicon glyphicon-cog"></i>
-											<span class="caret"></span>
-										</button>
-										<ul class="dropdown-menu">
-											<li><%= link_to 'Wrestler Profile', wrestler%></li>
-											<li><%= link_to 'Change Details', edit_wrestler_path(wrestler) %></li>
-											<li><%= link_to 'You\'re Fired', wrestler, method: :delete, data: { confirm: 'Are you sure?' } %></li>
-										</ul>
-									</div>
-									<h3 class="text-left"><%= wrestler.name %></h3>
-									</div>
-						<%end  %>
-					<%else  %>
-							<h4 class ="intro-text text-center">
-								You have no babyface wrestlers able to compete in the Mid Card! <%= link_to 'Hire a new wrestler',
-																																														 new_wrestler_path %><br>
-								Turn a heel face! Turn a face heel! Promote somebody! Alternatively
-							</h4><br>
-							<h1 class = "text-center"> SHOVE THAT CONTROL INTO A NOSE DIVE!!!</h1>
-					<%end  %>
-
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="box">
-				<div class="col-lg-12">
-					<hr>
-					<h3 class ="intro-text text-center"><u>Heels (Rudos)</u> </h3>
-					<%unless @mid_card_heels.blank?  %>
-						<% @mid_card_heels.each do |wrestler|  %>
-							<div class="col-sm-4 text-center">
-								<%=image_tag wrestler.image.url, class: "img-responsive "  %>
-								<div class="btn-group pull-right wrestler-options-group">
-									<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
-													aria-haspopup="true" aria-expanded="false">
-										<i class="glyphicon glyphicon-cog"></i>
-										<span class="caret"></span>
-									</button>
-									<ul class="dropdown-menu">
-										<li><%= link_to 'Wrestler Profile', wrestler%></li>
-										<li><%= link_to 'Change Details', edit_wrestler_path(wrestler) %></li>
-										<li><%= link_to 'You\'re Fired', wrestler, method: :delete, data: { confirm: 'Are you sure?' } %></li>
-									</ul>
-								</div>
-								<h3 class="text-left"><%= wrestler.name %></h3>
-							</div>
-						<%end  %>
-					<%else  %>
-							<h4 class ="intro-text text-center">
-								You have no heel wrestlers able to compete in the Mid Card! <%= link_to 'Hire a new wrestler',
-																																														 new_wrestler_path %><br>
-								Turn a heel face! Turn a face heel! Promote somebody! Alternatively
-							</h4><br>
-							<h1 class = "text-center"> SHOVE THAT CONTROL INTO A NOSE DIVE!!!</h1>
-					<%end  %>
-				</div>
-			</div>
-		</div>
-			<div class="row">
-				<div class="box">
-					<div class="col-lg-12">
-						<hr>
-						<h2 class="text-center">
-							<strong>Your Wrestlers in the Low Card! </h2></strong>
-						<h3 class ="intro-text text-center"><u>Babyfaces (Tecnicos)</u> </h3>
-						<%unless @low_card_babyfaces.blank?  %>
-							<% @low_card_babyfaces.each do |wrestler|  %>
-								<div class="col-sm-4 text-center">
-									<%=image_tag wrestler.image.url, class: "img-responsive "  %>
-									<div class="btn-group pull-right wrestler-options-group">
-										<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
-														aria-haspopup="true" aria-expanded="false">
-											<i class="glyphicon glyphicon-cog"></i>
-											<span class="caret"></span>
-										</button>
-										<ul class="dropdown-menu">
-											<li><%= link_to 'Wrestler Profile', wrestler%></li>
-											<li><%= link_to 'Change Details', edit_wrestler_path(wrestler) %></li>
-											<li><%= link_to 'You\'re Fired', wrestler, method: :delete, data: { confirm: 'Are you sure?' } %></li>
-										</ul>
-									</div>
-									<h3 class="text-left"><%= wrestler.name %></h3>
-								</div>
-							<%end  %>
-						<%else  %>
-								<h4 class ="intro-text text-center">
-									You have no babyface wrestlers able to compete in the Low Card! <%= link_to 'Hire a new wrestler',
-																																															 new_wrestler_path %><br>
-									Turn a heel face! Turn a face heel! Promote somebody! Alternatively
-								</h4><br>
-								<h1 class = "text-center"> SHOVE THAT CONTROL INTO A NOSE DIVE!!!</h1>
-						<%end  %>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="box">
-					<div class="col-lg-12">
-						<hr>
-						<h3 class ="intro-text text-center"><u>Heels (Rudos)</u> </h3>
-						<%unless @low_card_heels.blank?  %>
-							<% @low_card_heels.each do |wrestler|  %>
-								<div class="col-sm-4 text-center">
-									<%=image_tag wrestler.image.url, class: "img-responsive "  %>
-									<div class="btn-group pull-right wrestler-options-group">
-										<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
-														aria-haspopup="true" aria-expanded="false">
-											<i class="glyphicon glyphicon-cog"></i>
-											<span class="caret"></span>
-										</button>
-										<ul class="dropdown-menu">
-											<li><%= link_to 'Wrestler Profile', wrestler%></li>
-											<li><%= link_to 'Change Details', edit_wrestler_path(wrestler) %></li>
-											<li><%= link_to 'You\'re Fired', wrestler, method: :delete, data: { confirm: 'Are you sure?' } %></li>
-										</ul>
-									</div>
-									<h3 class="text-left"><%= wrestler.name %></h3>
-								</div>
-							<%end  %>
-						<%else  %>
-								<h4 class ="intro-text text-center">
-									You have no heel wrestlers able to compete in the Low Card! <%= link_to 'Hire a new wrestler',
-																																															 new_wrestler_path %><br>
-									Turn a heel face! Turn a face heel! Promote somebody! Alternatively
-								</h4><br>
-								<h1 class = "text-center"> SHOVE THAT CONTROL INTO A NOSE DIVE!!!</h1>
-						<%end  %>
-					</div>
-				</div>
-			</div>
-				<div class="row">
-					<div class="box">
-						<div class="col-lg-12">
-							<hr>
-							<h2 class="text-center">
-								<strong>Your Wrestlers in the Undercard!
-							</h2></strong>
-							<h3 class ="intro-text text-center"><u>Babyfaces (Tecnicos)</u> </h3>
-							<%unless @undercard_babyfaces.blank?  %>
-								<% @undercard_babyfaces.each do |wrestler|  %>
-									<div class="col-sm-4 text-center">
-										<%=image_tag wrestler.image.url, class: "img-responsive "  %>
-										<div class="btn-group pull-right wrestler-options-group">
-										<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
-														aria-haspopup="true" aria-expanded="false">
-											<i class="glyphicon glyphicon-cog"></i>
-											<span class="caret"></span>
-										</button>
-										<ul class="dropdown-menu">
-											<li><%= link_to 'Wrestler Profile', wrestler%></li>
-											<li><%= link_to 'Change Details', edit_wrestler_path(wrestler) %></li>
-											<li><%= link_to 'You\'re Fired', wrestler, method: :delete, data: { confirm: 'Are you sure?' } %></li>
-										</ul>
-									</div>
-										<h3 class="text-left"><%= wrestler.name %></h3>
-									</div>
-								<%end  %>
-							<%else  %>
-									<h4 class ="intro-text text-center">
-										You have no babyface wrestlers able to compete in the Undercard! <%= link_to 'Hire a new wrestler',
-																																																 new_wrestler_path %><br>
-										Turn a heel face! Turn a face heel! Promote somebody! Alternatively
-									</h4><br>
-									<h1 class = "text-center"> SHOVE THAT CONTROL INTO A NOSE DIVE!!!</h1>
-							<%end  %>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="box">
-						<div class="col-lg-12">
-							<hr>
-							<h3 class ="intro-text text-center"><u>Heels (Rudos)</u> </h3>
-							<%unless @undercard_heels.blank?  %>
-								<% @undercard_heels.each do |wrestler|  %>
-									<div class="col-sm-4 text-center">
-										<%=image_tag wrestler.image.url, class: "img-responsive "  %>
-										<div class="btn-group pull-right wrestler-options-group">
-											<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
-															aria-haspopup="true" aria-expanded="false">
-												<i class="glyphicon glyphicon-cog"></i>
-												<span class="caret"></span>
-											</button>
-											<ul class="dropdown-menu">
-												<li><%= link_to 'Wrestler Profile', wrestler%></li>
-												<li><%= link_to 'Change Details', edit_wrestler_path(wrestler) %></li>
-												<li><%= link_to 'You\'re Fired', wrestler, method: :delete, data: { confirm: 'Are you sure?' } %></li>
-											</ul>
-										</div>
-										<h3 class="text-left"><%= wrestler.name %></h3>
-									</div>
-								<%end  %>
-							<%else  %>
-									<h4 class ="intro-text text-center">
-										You have no heel wrestlers able to compete in the Undercard! <%= link_to 'Hire a new wrestler',
-																																																 new_wrestler_path %><br>
-										Turn a heel face! Turn a face heel! Promote somebody! Alternatively
-									</h4><br>
-									<h1 class = "text-center"> SHOVE THAT CONTROL INTO A NOSE DIVE!!!</h1>
-							<%end  %>
-						</div>
-					</div>
-				</div>
 				<div class="row">
 					<div class="box">
 						<div class="col-lg-12 text-center">
