--- a/app/views/wrestlers/index.slim
+++ b/app/views/wrestlers/index.slim
@@ -1,63 +1,49 @@
 - content_for :title do
 	| Roster
 .container
-	.row
-		.box
-			.col-lg-12
-				hr
-				.text-center
-					h1
-						- unless current_user.promotion.blank?
-							= current_user.promotion
-							|     Roster
-						- else
-							| Roster
-				hr
+	.row.box
+		.col-lg-12
+			hr
+				h1.text-center
+					- unless current_user.promotion.blank?
+						= current_user.promotion
+						|     Roster
+					- else
+						| Roster
+			hr
 	- (0..4).each do |position|
-		.row
-			.box
+		.row.box
 				.col-lg-12
 					hr
-					.text-center
-						h2
-							strong
-								| Your Wrestlers in the #{@positions[position]}!
+					h2.text-center.strong
+						| Your Wrestlers in the #{@positions[position]}!
 						- (0..1).each do |alignment|
 							- index = (position*2 + alignment)
-							.intro-text
-								h3
-									u
-										= @alignments[alignment]
-							- unless @wrestler_categories[index].blank?
-								- @wrestler_categories[index].each do |wrestler|
-									.col-sm-4
-										.text-center
+							h3.intro-text.u
+								= @alignments[alignment]
+								- unless @wrestler_categories[index].blank?
+									- @wrestler_categories[index].each do |wrestler|
+										.col-sm-4.text-center
 											= image_tag wrestler.image.url, class: "img-responsive"
-					// <div class="btn-group pull-right wrestler-options-group">
-					/ 	<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
-					/ 	aria-haspopup="true" aria-expanded="false">
-					/ 		<i class="glyphicon glyphicon-cog"></i>
-					/ 		<span class="caret"></span>
-					/ 	</button>
-					/ 	<ul class="dropdown-menu">
-					/ 		<li><%= link_to 'Wrestler Profile', wrestler%></li>
-					/ 		<li><%= link_to 'Change Details', edit_wrestler_path(wrestler) %></li>
-					/ 		<li><%= link_to 'You\'re Fired', wrestler, method: :delete, data: { confirm: 'Are you sure?' } %></li>
-					/ 	</ul>
-					/ </div>
-					/ 	<h3 class="text-left"><%= wrestler.name %></h3>
-					/ </div>
-					/ <%end  %>
-			<%else  %>
-				<h4 class ="intro-text text-center">
-				You have no babyface wrestlers able to compete in the Main Event! <%= link_to 'Hire a new wrestler', new_wrestler_path %><br>
-					Turn a heel face! Turn a face heel! Promote somebody! Alternatively
-				</h4><br>
-					<h1 class="text-center"> SHOVE THAT CONTROL INTO A NOSE DIVE!!!</h1>
-			<%end  %>
-				<div class="row">
-					<div class="box">
-						<div class="col-lg-12 text-center">
-							<hr>
-<%= link_to 'New Wrestler', new_wrestler_path, class: "btn btn-large text-center btn-success" %>
-</div></div></div>
+
+											.btn-group.pull-right.wrestler-options-group
+												button.btn.btn-default.dropdown-toggle type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+													i.glyphicon.glyphicon-cog
+														span.caret
+															ul.dropdown-menu
+																li = link_to 'Wrestler Profile', wrestler
+																li = link_to 'Change Details', edit_wrestler_path(wrestler)
+																li = link_to 'You\'re Fired', wrestler, method: :delete, data: { confirm: 'Are you sure?' }
+											h3.text-left = wrestler.name
+								-else
+
+									h4.intro-text.text-center
+										| You have no babyface wrestlers able to compete in the Main Event! #{link_to 'Hire a new wrestler', new_wrestler_path}
+										br
+										| Turn a heel face! Turn a face heel! Promote somebody! Alternatively
+										br
+										h1.text-center SHOVE THAT CONTROL INTO A NOSE DIVE!!!
+				.row.box
+					.col-lg-12.text-center
+						hr
+		= link_to 'New Wrestler', new_wrestler_path, class: "btn btn-large text-center btn-success"
