revamped several of the slim pages

--- a/app/views/wrestlers/edit.slim
+++ b/app/views/wrestlers/edit.slim
@@ -1,8 +1,7 @@
 - content_for :title do
 	| Edit Wrestler
-.row
-	.box
-		.col-sm-offset-3
-			.col-sm-6
-				h1 Editing Wrestler
-				= render 'form'
+.container
+	.row.box
+		.col-sm-offset-3.col-sm-6
+			h1 Editing Wrestler
+			= render 'form'
