--- a/app/views/pages/about.slim
+++ b/app/views/pages/about.slim
@@ -1,89 +1,80 @@
 - content_for :title do
 	| About
-.row
-	.box
-		.col-lg-12
-			.text-center
-				.brand-before
-					h2
-						small About
-				.brand-name
-					h1 Cream of the Crop
-.row
-	.box
-		.col-lg-12
+.row.box
+	.col-lg-12.text-center.brand-before
+		h2
+			small About
+			.brand-name
+				h1 Cream of the Crop
+.row.box
+	.col-lg-12
+		hr
+		.intro-text.text-center
+			h2 Shove that control into a nose dive Ho Krogan
 			hr
-				.intro-text
-					.text-center
-						h2 Shove that control into a nose dive Ho Krogan
-			hr
-				= image_tag "intro-pic-2.jpg", class: "img-responsive, img-border, img-left"
+		= image_tag "intro-pic-2.jpg", class: "img-responsive, img-border, img-left"
 
-			hr
-				p
-					| Michael Nash is a Ruby on Rails developer.  He is a recent graduate of The Iron Yard St Peterburg’s Ruby on
-					|	Rails program. He is also a former academic, with an MA in Chinese History from Columbia and years of travel
-					| language experience around Asia.
+		p
+			| Michael Nash is a Ruby on Rails developer.  He is a recent graduate of The Iron Yard St Peterburg’s Ruby on
+			|	Rails program. He is also a former academic, with an MA in Chinese History from Columbia and years of travel
+			| language experience around Asia.
 
-				p
-					| His current projects include (but are not limited to) developing a series of Rails engines as a supplement
-					|to rails composer, working through the problems on the Euler Project, working through the Learnynode
-					|program to learn Node.js, and and learning the basics of Python.
+		p
+			| His current projects include (but are not limited to) developing a series of Rails engines as a supplement
+			|to rails composer, working through the problems on the Euler Project, working through the Learnynode
+			|program to learn Node.js, and and learning the basics of Python.
 
-				p Michael has loads of open source code available at his #{link_to 'Github profile', 'https://github.com/utumno86'}
+		p Michael has loads of open source code available at his #{link_to 'Github profile', 'https://github.com/utumno86'}
 
-				p He tweets at #{link_to '@utumno86', 'https://twitter.com/utumno86'}
+		p He tweets at #{link_to '@utumno86', 'https://twitter.com/utumno86'}
 
-				p His portfolio is available at Github #{link_to 'here', 'http://utumno86.github.io/'}
-.row
-	.box
-		.col-lg-12
-			hr
-				.intro-text
-					.text-center
-						h2 A Glossary of Wrestling Terms
-			p
-				| These definitions are lifted verbatim from a #{link_to 'Grantland article', 'http://grantland.com/features/grantland-dictionary-pro-wrestling-edition/'} by the great wrestling
-				| journalist David Shoemaker, AKA The Masked Man.
+		p His portfolio is available at Github #{link_to 'here', 'http://utumno86.github.io/'}
+.row.box
+	.col-lg-12
+		hr
+		.intro-text.text-center
+			h2 A Glossary of Wrestling Terms
+		hr
+		p
+			| These definitions are lifted verbatim from a #{link_to 'Grantland article', 'http://grantland.com/features/grantland-dictionary-pro-wrestling-edition/'} by the great wrestling
+			| journalist David Shoemaker, AKA The Masked Man.
 
-			p babyface (n.) — A heroic or good-guy wrestler. (Also known as: face; baby [archaic].) (Antonym: heel.)
+		p babyface (n.) — A heroic or good-guy wrestler. (Also known as: face; baby [archaic].) (Antonym: heel.)
 
-			p card (n.) — Traditionally, a night’s match lineup; more broadly, a measure of position within the promotion or company, as in, “Joe’s a main-eventer. He’s at the top of the card.”
+		p card (n.) — Traditionally, a night’s match lineup; more broadly, a measure of position within the promotion or company, as in, “Joe’s a main-eventer. He’s at the top of the card.”
 
-			p finish (n.) — The scripted ending of a match. A finisher is a wrestler’s match-ending move. A clean finish is a fair pinfall win; a dirty finish occurs when the ending is marred by cheating or is otherwise in dispute; a false finish is when the wrestlers convey one ending only for it to turn out to be misdirection or to have it reversed. A Dusty finish is a particularly notorious form of false finish wherein the underdog hero appears to beat his foe, only to have the win overturned on a technicality at a later date; this allows the fans to have the excitement of a big win while maintaining the status quo. A screwjob is a finish in which the promoter and one wrestler conspire to have the other wrestler lose without his foreknowledge. A double cross is when a wrestler refuses to abide by the scripted ending, usually of his own volition (a version of going into business for oneself), described by Jim Cornette as “no-sell and drive away.” The finish man is a member of a tag team whose role is to work the ending of a (usually victorious) match.
+		p finish (n.) — The scripted ending of a match. A finisher is a wrestler’s match-ending move. A clean finish is a fair pinfall win; a dirty finish occurs when the ending is marred by cheating or is otherwise in dispute; a false finish is when the wrestlers convey one ending only for it to turn out to be misdirection or to have it reversed. A Dusty finish is a particularly notorious form of false finish wherein the underdog hero appears to beat his foe, only to have the win overturned on a technicality at a later date; this allows the fans to have the excitement of a big win while maintaining the status quo. A screwjob is a finish in which the promoter and one wrestler conspire to have the other wrestler lose without his foreknowledge. A double cross is when a wrestler refuses to abide by the scripted ending, usually of his own volition (a version of going into business for oneself), described by Jim Cornette as “no-sell and drive away.” The finish man is a member of a tag team whose role is to work the ending of a (usually victorious) match.
 
-			p foreign object (n.) — The unnecessarily officious term for an illegal weapon secretly used in a match. Examples include (but are not limited to) rolls of quarters, brass knuckles, lengths of chain, spikes, pencils, loaded gloves, and loaded boots. Championship belts and other ringside accoutrements (microphones, ring bells, ring stairs, etc.) are illegal objects but not literally foreign. During the 1980s, Turner Broadcasting Company disallowed the term during broadcasts, so they temporarily substituted international object.
+		p foreign object (n.) — The unnecessarily officious term for an illegal weapon secretly used in a match. Examples include (but are not limited to) rolls of quarters, brass knuckles, lengths of chain, spikes, pencils, loaded gloves, and loaded boots. Championship belts and other ringside accoutrements (microphones, ring bells, ring stairs, etc.) are illegal objects but not literally foreign. During the 1980s, Turner Broadcasting Company disallowed the term during broadcasts, so they temporarily substituted international object.
 
-			p gimmick (n.) — A wrestler’s persona, character, or motif. As in, “The Russian’s working the evil-foreigner gimmick.” It can also refer to the scripted quality of a match, as in, “That match had too much gimmick.” In insider usage, it can also refer to plunder used in the ring or any unusual foreign object introduced, like, “For the ending, let’s have the Russian hit Joe with a gimmick.” (In this instance, it’s a synonym for fernum.) In backstage lingo, “gimmick” is a stand-in for basically any physical noun, like referring to a bag by saying “grab your gimmick and let’s go” or referring to a pacemaker as a “heart gimmick”; or as a euphemism for drugs, from prescribed painkillers to street drugs. If an object is “gimmicked,” it’s rigged for misdirection, as in a chair or table made to easily fall apart when used as a weapon.
+		p gimmick (n.) — A wrestler’s persona, character, or motif. As in, “The Russian’s working the evil-foreigner gimmick.” It can also refer to the scripted quality of a match, as in, “That match had too much gimmick.” In insider usage, it can also refer to plunder used in the ring or any unusual foreign object introduced, like, “For the ending, let’s have the Russian hit Joe with a gimmick.” (In this instance, it’s a synonym for fernum.) In backstage lingo, “gimmick” is a stand-in for basically any physical noun, like referring to a bag by saying “grab your gimmick and let’s go” or referring to a pacemaker as a “heart gimmick”; or as a euphemism for drugs, from prescribed painkillers to street drugs. If an object is “gimmicked,” it’s rigged for misdirection, as in a chair or table made to easily fall apart when used as a weapon.
 
-			p heel (n.) — A bad-guy wrestler. Antonym of babyface. A monster heel is a massive, frightening villain.
+		p heel (n.) — A bad-guy wrestler. Antonym of babyface. A monster heel is a massive, frightening villain.
 
-			p indies (n.) — The modern term for independent, usually small-scale, wrestling promotions without a national television presence. At this point it functionally means any promotion that isn’t WWE or TNA.
+		p indies (n.) — The modern term for independent, usually small-scale, wrestling promotions without a national television presence. At this point it functionally means any promotion that isn’t WWE or TNA.
 
-			p lucha libre (n.) — Literally “free fighting”; Mexican (or Mexican-style) wrestling, known for acrobatic moves, a more performative combat style that borders on the ridiculous, and cartoonish good-versus-evil storytelling.
+		p lucha libre (n.) — Literally “free fighting”; Mexican (or Mexican-style) wrestling, known for acrobatic moves, a more performative combat style that borders on the ridiculous, and cartoonish good-versus-evil storytelling.
 
-			p turn (n.) — The act of switching between being a hero and a villain in a story line. In rare instances, a face and heel will both switch sides during the course of a match; this is known as a “double turn.” (See also: face turn; heel turn.)
+		p turn (n.) — The act of switching between being a hero and a villain in a story line. In rare instances, a face and heel will both switch sides during the course of a match; this is known as a “double turn.” (See also: face turn; heel turn.)
 
-.row
-	.box
-		.col-lg-12
-			hr
-				.intro-text
-					.text-center
-						h2 Space Mountain may be the oldest ride in the park, but it has the longest line
-			hr
-				= image_tag "intro-pic-3.jpg", class: "img-responsive img-border img-left"
+.row.box
+	.col-lg-12
+		hr
+		.intro-text.text-center
+			h2 Space Mountain may be the oldest ride in the park, but it has the longest line
+		hr
+		= image_tag "intro-pic-3.jpg", class: "img-responsive img-border img-left"
 
-			hr
-			p This web application was created for the Summer 2015 Ruby on Rails Engineering Cohort of the #{link_to 'Iron Yard Tampa/St.Petersburg', 'http://theironyard.com/locations/tampa-st-petersburg/'}
+		hr
+		p This web application was created for the Summer 2015 Ruby on Rails Engineering Cohort of the #{link_to 'Iron Yard Tampa/St.Petersburg', 'http://theironyard.com/locations/tampa-st-petersburg/'}
 
-			p This web application was created wit #{link_to 'Rails Composer', 'http://railsapps.github.io/rails-composer/'} from the #{link_to 'RailsApps project', 'http://railsapps.github.io/'}.
+		p This web application was created wit #{link_to 'Rails Composer', 'http://railsapps.github.io/rails-composer/'} from the #{link_to 'RailsApps project', 'http://railsapps.github.io/'}.
 
-			p This application requires:
+		p This application requires:
 
-			P Ruby 2.2.2
+		P Ruby 2.2.2
 
-			p Rails 4.2.1
+		p Rails 4.2.1
 
 / // Copyright 2013-2015 Iron Summit Media Strategies, LLC
 / Licensed under the Apache License, Version 2.0 (the "License");
