--- a/app/views/wrestlers/show.slim
+++ b/app/views/wrestlers/show.slim
@@ -1,39 +1,39 @@
 - content_for :title do
 	| #{@wrestler.name}
 .container
-	.row
-		.box
-			.col-lg-12
+	.row.box
+		.col-lg-12
+			hr
+			.intro-text.text-center
+				h2 = @wrestler.name
 				hr
-				.intro-text
-					.text-center
-						h2
-							= @wrestler.name
-				hr
-					= image_tag @wrestler.image.url, class: "img-responsive, img-border, img-left"
+				= image_tag @wrestler.image.url, class: "img-responsive, img-border, img-left"
 
-					- if @wrestler.alignment == true
-						p	This wrestler is a Babyface (Tecnico).
-					- else
-						p	This wrestler is a Heel (Rudo).
+			- if @wrestler.alignment == true
 
-					- if @wrestler.position == 5
-						p This wrestler currently performs in the Main Event.
-					- elsif @wrestler.position == 4
-						p This wrestler currently performs in the High Card.
-					- elsif @wrestler.position == 3
-						p This wrestler currently performs in the Mid Card.
-					- elsif @wrestler.position == 2
-						p This wrestler currently performs in the Low Card.
-					- else
-						p This wrestler currently performs in the Undercard.
+				p	This wrestler is a Babyface (Tecnico).
+			- else
 
-					- if @wrestler.injured
-						p	This wrestler is injured and cannot currently compete.
+				p	This wrestler is a Heel (Rudo).
 
-					- unless @wrestler.user.promotion.blank?
-						p This wrestler is currently performing in the #{@wrestler.user.promotion} promotion under owner #{@wrestler.user.name}.
+			- if @wrestler.position == 5
+				p This wrestler currently performs in the Main Event.
+			- elsif @wrestler.position == 4
+				p This wrestler currently performs in the High Card.
+			- elsif @wrestler.position == 3
+				p This wrestler currently performs in the Mid Card.
+			- elsif @wrestler.position == 2
+				p This wrestler currently performs in the Low Card.
+			- else
 
-					p
-						= link_to 'Change Wrestler Profile', edit_wrestler_path(@wrestler), class: "btn btn-large btn-info"
-br
+				p This wrestler currently performs in the Undercard.
+
+			- if @wrestler.injured
+				p	This wrestler is injured and cannot currently compete.
+
+			- unless @wrestler.user.promotion.blank?
+				p This wrestler is currently performing in the #{@wrestler.user.promotion} promotion under owner #{@wrestler.user.name}.
+
+			p = link_to 'Change Wrestler Profile', edit_wrestler_path(@wrestler), class: "btn btn-large btn-info"
+
+	br
