added about the website to the about page

--- a/app/views/pages/about.slim
+++ b/app/views/pages/about.slim
@@ -5,7 +5,7 @@
 		h2
 			small About
 			.brand-name
-				h1 Cream of the Crop
+				h1 Cream of the Crop - About the Website
 .row.box
 	.col-lg-12
 		hr
