updated some of the documentation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
 						<%=link_to 'Jermaine Divine', ("http://jermainedivine.deviantart.com/art/Rest-In-Peace-Macho-Man-209926236")  %> over at Deviant
 						art.<br>
             Logo courtesy of fellow Iron Yard graduate <%= link_to 'Derek Dyer', ('https://github.com/digitaldrk')  %><br>
-					Copyright &copy; Michael E. Nash (許書聖） 2015 <br>
+					Copyright &copy; Michael E. Nash (許書聖）<%= Date.today.year %> <br>
 					Would you like to learn more <%= link_to 'About', page_path('about') %> Cream of the Crop and its
 						author?
           </p>
